--- a/P4_dog_identification_app/dog_app.ipynb
+++ b/P4_dog_identification_app/dog_app.ipynb
@@ -305,6 +305,7 @@
     "\n",
     "__Answer:__\n",
     "\n",
+    "Based on my search about Haar Cascade, the main of it is achieving a good performance for both accuracy and time-complexity, when you have a number of weak classifier. The weak classifier must work at least with 51% accuracy. The cascade classifier reject the many of samples in first node classifier with an efficient time. Which means it might lower the accuracy in comprimse of time.   \n",
     "I don't think so. I think there should be another algorithm which can extract features of human faces which are only including eyes, mouths, etc. Features like human side face should also be included.\n",
     "\n",
     "We suggest the face detector from OpenCV as a potential way to detect human images in your algorithm, but you are free to explore other approaches, especially approaches that make use of deep learning :).  Please use the code cell below to design and test your own face detection algorithm.  If you decide to pursue this _optional_ task, report performance on each of the datasets."
@@ -1120,6 +1121,7 @@
     "__Answer:__ \n",
     "\n",
     "I used the exact same architeture as above, the only difference is the bottleneck features. Just want to compare the difference between two different bottleneck features. And it turned out Resnet50 did much better than VGG16.\n",
+    "The reason why I choose transfer learning is that it can highly reduce the time without losing the accuracy with a pre-trained model. Transfer learning is where pre-trained models are used as the starting point on image preocessing tasks given the vast compute and time resources required to develop neural network models on these problems and from the huge jumps in skill that they provide on related problems.\n",
     "\n"
    ]
   },
